# gloryx

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  constants.tsx  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  types.ts
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  trace
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/server/: middleware-build-manifest.js  server-reference-manifest.json  webpack-runtime.js
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/admin/: page.tsx
app/games/: page.tsx
app/planner/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
app/work/: page.tsx
backend-python/: app.py  requirements.txt
backend-rust/: Cargo.toml
backend-rust/src/: main.rs
backend-rust/vault/: HEIST-WHE2561.json
components/: Footer.tsx  Hero.tsx  InfoSection.tsx  Navbar.tsx
components/hooks/: AudioProvider.tsx  ThemeProvider.tsx
components/layout/: CrewTicker.tsx  CustomCursor.tsx  Footer.tsx  IntroLoader.tsx  LayoutWrapper.tsx  Navbar.tsx
components/motion/: AnimatedText.tsx  MagneticButton.tsx  PageTransition.tsx  ScrollProgressBar.tsx  SectionBridge.tsx  TiltCard.tsx
components/pages/: AboutPage.tsx  AdminDashboardPage.tsx  AdminLoginPage.tsx  CareersPage.tsx  CaseStudyPage.tsx  ContactPage.tsx  GamesPage.tsx  HomePage.tsx  PlannerPage.tsx  (+2 more)
hooks/: useMotionSafety.ts  useMousePosition.ts  useReducedMotion.ts
lib/: admin-auth.ts  motion.ts  projects.ts  team.ts
(+58 files in other folders)
